--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "lox": "ts-node ./src/lox.ts",
-    "expr": "ts-node ./util/expgen.ts ./src/expressions.ts",
-    "test": "node ./tests/tests.mjs"
+    "test": "node ./tests/tests.mjs",
+    "gen": "ts-node ./util/expgen.ts ./src/expressions.ts ./src/statements.ts"
   },
 
   "dependencies": {
