--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "lox": "ts-node ./src/lox.ts",
     "test": "node ./tests/tests.mjs",
-    "gen": "ts-node ./util/expgen.ts ./src/expressions.ts ./src/statements.ts"
+    "gen": "ts-node ./util/gen.ts ./src/expressions.ts ./src/statements.ts"
   },
 
   "dependencies": {
